Enabling FCM notifications
